--- a/mina-client/pom.xml
+++ b/mina-client/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>exp-network</artifactId>
+        <artifactId>exp-net</artifactId>
         <groupId>com.ade.exp</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -11,5 +11,17 @@
 
     <artifactId>mina-client</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
