--- a/mina-sshd/src/main/resources/log4j.properties
+++ b/mina-sshd/src/main/resources/log4j.properties
@@ -1,24 +1,8 @@
 ### set log levels ###
-log4j.rootLogger = debug,consoleAppender,D,E
+log4j.rootLogger = debug,consoleAppender
 
 log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.Threshold = INFO
 log4j.appender.consoleAppender.layout = org.apache.log4j.PatternLayout
 log4j.appender.consoleAppender.layout.ConversionPattern =%d %-5p %c %m %n
 log4j.appender.consoleAppender.ImmediateFlush = true
-
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = ../logs/mina_info.log
-log4j.appender.D.Append = true
-log4j.appender.D.Threshold = INFO
-#log4j.appender.D.MaxFileSize=2MB
-#log4j.appender.D.MaxBackupIndex=100
-log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
-
-log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = ../logs/mina_debug.log
-log4j.appender.E.Append = true
-log4j.appender.E.Threshold = debug
-log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
