--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ade.exp</groupId>
-    <artifactId>exp-network</artifactId>
+    <artifactId>exp-net</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>mina-client</module>
@@ -42,13 +42,13 @@
         </plugins>
 
         <!--<resources>-->
-            <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
-                <!--<filtering>true</filtering>-->
-                <!--<excludes>-->
-                    <!--<exclude>**/*</exclude>-->
-                <!--</excludes>-->
-            <!--</resource>-->
+        <!--<resource>-->
+        <!--<directory>src/main/resources</directory>-->
+        <!--<filtering>true</filtering>-->
+        <!--<excludes>-->
+        <!--<exclude>**/*</exclude>-->
+        <!--</excludes>-->
+        <!--</resource>-->
         <!--</resources>-->
     </build>
 
@@ -63,16 +63,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.mina</groupId>
-            <artifactId>mina-core</artifactId>
-            <version>2.0.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.0</version>
         </dependency>
     </dependencies>
 
