--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mina-server</module>
         <module>netty-server</module>
         <module>netty-client</module>
+        <module>netty-http</module>
     </modules>
 
     <packaging>pom</packaging>
