--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>netty-server</module>
         <module>netty-client</module>
         <module>netty-http</module>
+        <module>java-http</module>
     </modules>
 
     <packaging>pom</packaging>
